--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -2,7 +2,7 @@ name: Build & Publish Game
 
 on:
   push:
-    branches: [main]
+    branches: main
 
 jobs:
   export_game:
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: checkout source code
         uses: actions/checkout@v2.3.2
+
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_SILENTWOLF_API_KEY: ${{ secrets.SILENTWOLF_API_KEY }}
+          envkey_SILENTWOLF_GAME_ID: ${{ secrets.SILENTWOLF_GAME_ID }}
+          file_name: .env
+          fail_on_empty: true
 
       - name: export game
         uses: firebelley/godot-export@v4.1.0
