--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ debug.log
 # Imported translations (automatically generated from CSV files)
 *.translation
 
+#environmental variables, we skip the dot because godot doesn't export those files
+.env
+
 # Mono-specific ignores
 .mono/
 data_*/
