--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,9 @@
 [credits]
-PROGRAMMING="hackerman"
-GRAPHIC_ART="Pikaso"
-SFX="Chano"
-TRANSLATES="Cafiero"
-HISTORY="Mengano"
-TESTING="Eltest Eador"
-SPONSOR="BBWA"
-REVIEW="Rat kid"
+PROGRAMMING="Paul McNamee"
+GRAPHIC_ART="Paul McNamee"
+SFX="Paul McNamee"
+TRANSLATES="Paul McNamee"
+HISTORY="Paul McNamee"
+TESTING="Paul McNamee"
+SPONSOR="Paul McNamee"
+REVIEW="Paul McNamee"
